fixed send btn z-index & channel scoll behaviour

--- a/src/app/components/channel/channel.component.scss
+++ b/src/app/components/channel/channel.component.scss
@@ -20,6 +20,7 @@
 
 .scroll-wrapper {
     overflow-y: scroll;
+    height: calc(100vh - 326px);
 
     ::-webkit-scrollbar {
         display: none;
@@ -93,14 +94,16 @@
 * Message styles
 **/
 .message-container {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    position: relative;
-    bottom: 0;
+    position: absolute;
+    bottom: 1rem;
     background: #303030;
     border-top: 1px solid rgb(87, 87, 87);
     padding: 8px 10px;
     width: 100%;
+    height: fit-content;
 
     .button-send {
         background-color: transparent;
@@ -108,6 +111,7 @@
         color: white;
         margin-right: 0.5rem;
         cursor: pointer;
+        z-index: 2;
     }
 
     .message-bottom {
